// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageBar /> with a type matches its snapshot 1`] = `
<CustomizedBlock
  className=
      y-message-bar
      {
        background-color: #f3f5f8;
        border-color: #ffc56c;
        border-left-style: solid;
        border-left-width: 4px;
        border-radius: 1px;
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedBlock>
`;

exports[`<MessageBar /> with actions matches its snapshot 1`] = `
<CustomizedBlock
  className=
      y-message-bar
      {
        background-color: #f3f5f8;
        border-color: #a8b0bd;
        border-left-style: solid;
        border-left-width: 4px;
        border-radius: 1px;
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
    <FixedGridColumn
      className=

          {
            white-space: nowrap;
          }
      fixed={true}
    >
      <FakeLink>
        Link
      </FakeLink>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedBlock>
`;

exports[`<MessageBar /> with additional className matches its snapshot 1`] = `
<CustomizedBlock
  className=
      y-message-bar
      TEST_CLASSNAME
      {
        background-color: #f3f5f8;
        border-color: #a8b0bd;
        border-left-style: solid;
        border-left-width: 4px;
        border-radius: 1px;
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedBlock>
`;

exports[`<MessageBar /> with default options matches its snapshot 1`] = `
<CustomizedBlock
  className=
      y-message-bar
      {
        background-color: #f3f5f8;
        border-color: #a8b0bd;
        border-left-style: solid;
        border-left-width: 4px;
        border-radius: 1px;
        padding-bottom: 8px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 7px;
      }
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedBlock>
`;
